feat: adicionando funcionalidade marquee para box com textos

--- a/text-options.html
+++ b/text-options.html
@@ -21,10 +21,8 @@
     <div class="box-fluid">
       <p>Texto que é curto</p>
     </div>
-    <div class="box-fluid">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere laoreet ligula, eget sollicitudin sem hendrerit in. Curabitur vel ipsum at lectus congue tristique. Sed dignissim pretium euismod. Donec at molestie lectus. Vestibulum sit amet eros mi. Aenean et ullamcorper nunc. Pellentesque scelerisque dictum nunc, sit amet blandit urna luctus id. Phasellus nunc ante, pulvinar vitae molestie sit amet, imperdiet porttitor leo. Nulla eleifend libero in sodales commodo. In suscipit suscipit augue a eleifend. Sed egestas sed massa sed aliquam.
-
-      </p>
+    <div class="box-fluid" data-mode="marquee">
+      <p class="box-fluid__inner">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere laoreet ligula, eget sollicitudin sem hendrerit in. Curabitur vel ipsum at lectus congue tristique. Sed dignissim pretium euismod. Donec at molestie lectus. Vestibulum sit amet eros mi. Aenean et ullamcorper nunc. Pellentesque scelerisque dictum nunc, sit amet blandit urna luctus id. Phasellus nunc ante, pulvinar vitae molestie sit amet, imperdiet porttitor leo. Nulla eleifend libero in sodales commodo. In suscipit suscipit augue a eleifend. Sed egestas sed massa sed aliquam.</p>      
     </div>
   </div>
   <script src="./main.js"></script>
