feat: expandindo os elementos quando a pagina carrega

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-  <div class="box-container">
+  <div class="box-container" data-auto-expand="false" data-expand-quantity="13">
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -63,7 +63,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -114,7 +114,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -165,7 +165,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -216,7 +216,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -267,7 +267,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -318,7 +318,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -369,7 +369,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -420,7 +420,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -471,7 +471,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -522,7 +522,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -573,7 +573,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -624,7 +624,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -675,7 +675,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -726,7 +726,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
@@ -777,7 +777,7 @@
     </div>
 
     <div class="box-fluid">
-      <h3>Titulo doo carad</h3>
+      <h3>Titulo do card</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet est at diam efficitur, non viverra ex
         fringilla. Vestibulum odio augue, finibus et quam quis, ullamcorper euismod eros. Sed ac est pharetra, faucibus
